# micro-Toolkit

./: .gitignore  LICENSE  README.md  analysis_results.md  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  dngine.spec  dngine_macos.spec  micro-toolkit.iss  micro-toolkit.spec  pyproject.toml  requirements.txt  standardization_audit.md  toolkit_config.json
dngine/: __main__.py  _manifest_hash.py  app.py  builtin_plugin_manifest.json  main.py
dngine/core/: app_config.py  autostart.py  builtin_manifest.py  cli.py  clip_monitor.py  clipboard_quick_panel.py  plugin_manager.py  runtime_launch.py  services.py  theme.py  tray.py
dngine/i18n/: ar.json  en.json
micro_toolkit/: __init__.py  __main__.py  app.py  builtin_plugin_manifest.json  main.py
micro_toolkit/core/: __init__.py  app_config.py  app_utils.py  autostart.py  builtin_tool_commands.py  cli.py  clipboard_quick_panel.py  clipboard_store.py  command_runtime.py  commands.py  document_converter.py  elevation.py  hotkey_helper.py  i18n.py  media_utils.py  page_style.py  plugin_api.py  plugin_manager.py  plugin_packages.py  plugin_state.py  privileged_broker.py  services.py  session_manager.py  shell_registry.py  shortcuts.py  table_model.py  theme.py  tray.py  workers.py  workflows.py
micro_toolkit/i18n/: ar.json  en.json
micro_toolkit/plugins/: __init__.py  about_center.ar.json  about_center.en.json  about_center.py  clipboard_manager.ar.json  clipboard_manager.en.json  clipboard_manager.py  (+8 more)
tests/: test_web_scraper.py
tools/: audit_global_ui.py  generate_builtin_plugin_manifest.py
(+66 files in other folders)
